Fixed spacing (2 extra bits for a total of 10), added dot replication and stretching features.

--- a/app/main.css
+++ b/app/main.css
@@ -14,6 +14,6 @@ body {
 canvas {
   width: 100vh !important;
   height: auto !important;
-  /* background-color: grey; */
+  background-color: grey;
   image-rendering:pixelated;
 }
